--- a/Основы JS/1.5_Data_Types/index.html
+++ b/Основы JS/1.5_Data_Types/index.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
 <body>
-    <h1>Hi</h1>
-    <p>Просто абзац</p>
-  <script src="index.js"></script>  
+    <style>
+       body {
+          background-color: black;
+       } 
+    </style>
+    <script src="index.js"></script>
 </body>
 </html>
