--- a/Основы JS/1.10_if/index.html
+++ b/Основы JS/1.10_if/index.html
@@ -6,6 +6,11 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <script src="index.js"></script>
+    <style>
+         body {
+             background-color: black;
+         }
+    </style>
 </body>
 </html>
