--- a/Основы JS/1.11_Logical_operators/index.html
+++ b/Основы JS/1.11_Logical_operators/index.html
@@ -6,6 +6,11 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <style>
+        body {
+            background-color: rgb(31, 30, 30);
+        }
+    </style>
+    <script src="index.js"></script>
 </body>
 </html>
