--- a/Основы JS/1.12_/index.html
+++ b/Основы JS/1.12_/index.html
@@ -1,11 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
 <body>
-    
+    <style>
+         body {
+             background-color: black;
+         }
+    </style>
+    <script src="index.js"></script>
 </body>
 </html>
