--- a/Основы JS/1.1_Hellow_World/index.html
+++ b/Основы JS/1.1_Hellow_World/index.html
@@ -1,10 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <title>Курс JS</title>
-    <script src="index.js"></script>
-  </head>
-  <body>
-  </body>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <style>
+        body {
+            background-color: black;
+        }
+    </style>
+</head>
+<body>
+   <script src="index.js"></script> 
+</body>
 </html>
