--- a/Основы JS/1.2_Code/index.html
+++ b/Основы JS/1.2_Code/index.html
@@ -4,10 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        body {
+            background-color: black;
+        }
+    </style>
 </head>
 <body>
-    <h1>Hi</h1>
-    <p>Просто абзац</p>
-  <script src="index.js"></script>  
+   <script src="index.js"></script> 
 </body>
 </html>
