--- a/Основы JS/1.11_Logical_operators/index.html
+++ b/Основы JS/1.11_Logical_operators/index.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-</head>
-<body>
     <style>
         body {
-            background-color: rgb(31, 30, 30);
+            background-color: black;
         }
     </style>
-    <script src="index.js"></script>
+</head>
+<body>
+   <script src="index.js"></script> 
 </body>
 </html>
