--- a/Основы JS/1.13_Loops/index.html
+++ b/Основы JS/1.13_Loops/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Loops</title>
-</head>
-<body>
+    <title>Document</title>
     <style>
         body {
             background-color: black;
         }
     </style>
-    <script src="index.js"></script>
+</head>
+<body>
+   <script src="index.js"></script> 
 </body>
 </html>
