--- a/Основы JS/1.4_Variables/index.html
+++ b/Основы JS/1.4_Variables/index.html
@@ -4,8 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        body {
+            background-color: black;
+        }
+    </style>
 </head>
 <body>
-    <script src="index.js"></script>
+   <script src="index.js"></script> 
 </body>
 </html>
