--- a/07. Классы/02. Наследование классов/index.html
+++ b/07. Классы/02. Наследование классов/index.html
@@ -11,6 +11,7 @@
     </style>
 </head>
 <body>
-   <script src="index.js"></script> 
+   <script src="index.js"></script>
+   <script src="test.js"></script>
 </body>
 </html>
