--- a/09. Промисы, async_await/02. Промисы/index.html
+++ b/09. Промисы, async_await/02. Промисы/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,9 +9,27 @@
         body {
             background-color: black;
         }
+
+        .message-ball {
+            font-size: 20px;
+            line-height: 200px;
+            text-align: center;
+        }
+
+        .circle {
+            transition-property: width, height;
+            transition-duration: 2s;
+            position: fixed;
+            transform: translateX(-50%) translateY(-50%);
+            background-color: rgb(33, 123, 158);
+            border-radius: 50%;
+        }
     </style>
 </head>
+
 <body>
-   <script src="index.js"></script> 
+    <button onclick="go()">Я рисую круг</button>
+    <script src="index.js"></script>
 </body>
+
 </html>
