--- a/02. Браузер/01. Документ/01. Браузерное окружение/index.html
+++ b/02. Браузер/01. Документ/01. Браузерное окружение/index.html
@@ -1,12 +1,23 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        body {
+            background-color: #000;
+        }
+        button {
+            margin: 10px;
+            border-radius: 15px;
+        }
+    </style>
 </head>
 <body>
+    <button onclick="changeBg()">Сменить цвет фона</button>
+    <button onclick="changeLocation()">Открыть другой сайт</button>
     <script src="index.js"></script>
 </body>
 </html>
