--- a/02. Браузер/01. Документ/03. Навигация по DOM-элементам/index.html
+++ b/02. Браузер/01. Документ/03. Навигация по DOM-элементам/index.html
@@ -1,17 +1,63 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <style>
+    <style id="style">
         body {
             background-color: #111;
+            color: #fff
+        }
+
+        #table {
+            margin: 10px 0px;
         }
     </style>
 </head>
+
 <body>
+    <table border="1" id="table">
+        <tr>
+            <td style="transition: 1s;">1:1</td>
+            <td>2:1</td>
+            <td>3:1</td>
+            <td>4:1</td>
+            <td>5:1</td>
+        </tr>
+        <tr>
+            <td>1:2</td>
+            <td style="transition: 1s;">2:2</td>
+            <td>3:2</td>
+            <td>4:2</td>
+            <td>5:2</td>
+        </tr>
+        <tr>
+            <td>1:3</td>
+            <td>2:3</td>
+            <td style="transition: 1s;">3:3</td>
+            <td>4:3</td>
+            <td>5:3</td>
+        </tr>
+        <tr>
+            <td>1:4</td>
+            <td>2:4</td>
+            <td>3:4</td>
+            <td style="transition: 1s;">4:4</td>
+            <td>5:4</td>
+        </tr>
+        <tr>
+            <td>1:5</td>
+            <td>2:5</td>
+            <td>3:5</td>
+            <td>4:5</td>
+            <td style="transition: 1s;">5:5</td>
+        </tr>
+    </table>
+    <button onclick="color()">Нажми на меня</button>
     <script src="index.js"></script>
 </body>
+
 </html>
