--- a/02. Браузер/01. Документ/04. Поиск (getElement, querySelector)/index.html
+++ b/02. Браузер/01. Документ/04. Поиск (getElement, querySelector)/index.html
@@ -8,10 +8,14 @@
     <style>
         body {
             background-color: #111;
+            color: #fff;
         }
     </style>
 </head>
 <body>
+    <div id="elem">
+        <div id="elem-content">Element</div>
+    </div>
     <script src="index.js"></script>
 </body>
 </html>
